# NeuroH

./: .gitignore  AGENTS.md  README.md  experiment_protocol.md  paln.md
projects/homeoorganism/: README.md  pyproject.toml
projects/homeoorganism/configs/: ablation.yaml  continuous_full.yaml  continuous_no_regen.yaml  episodic_full.yaml  v1_baseline_full.yaml
projects/homeoorganism/configs/seeds/: official_rc4.txt
projects/homeoorganism/docs/: rc4_pilot_review.md  rc4_progress.md  rc4_smoke_notes.md  rc4_spec.md  rc4_verdict.md  vision.md
projects/homeoorganism/docs/decisions/: 001-v2-agent-fork.md  README.md
projects/homeoorganism/src/homeoorganism/: __init__.py
projects/homeoorganism/tests/: conftest.py
projects/homeoorganism/tests/ablation/: test_ablation_modes.py
projects/homeoorganism/tests/integration/: test_life_orchestrator.py  test_life_snapshot_builder.py  test_monitoring_dispatch.py  test_post_consume_recovery.py  test_rc2_regressions.py  test_runtime_and_api.py  test_v1_baseline_identity.py  test_v1_baseline_integration.py
projects/homeoorganism/tests/unit/: test_agent_memory_and_planning.py  test_continuous_metrics.py  test_ecology.py  test_env_core.py  test_event_metrics.py  test_lifetime_metrics.py  test_metrics.py  test_monitoring_core.py  test_rc4_configs.py  test_rc4_domain_config.py  test_rolling_window.py  test_series_metrics.py  test_state_categorizer.py  test_world_generator_resources.py
projects/release-tooling/: .gitignore  README.md  assemble_release.py  pyproject.toml
projects/release-tooling/src/release_tooling/: __init__.py  (+1 more)
(+386 files in other folders)
