[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "release-tooling"
version = "0.1.0"
description = "Read-only release assembly for frozen rc artifacts."
requires-python = ">=3.13"

[project.scripts]
assemble-release = "release_tooling.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
